terraform/modules/security_group_rabbit_management/main.tf
resource "aws_security_group" "rabbit_management" {
  name = "${var.environment}_rabbit_management"
  ingress {
    from_port   = 15672
    to_port     = 15672
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port       = 15672
    to_port         = 15672
    protocol        = "tcp"
    ipv6_cidr_blocks = ["::/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    ipv6_cidr_blocks = ["::/0"]
  }
}

output "security_group_rabbit_management_id" {
  value = aws_security_group.rabbit_management.id
}
